--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "website.js",
   "dependencies": {
     "camelcase": "^6.3.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "slick-slider": "^1.8.2"
   },
@@ -13,7 +14,7 @@
     "sass": "^1.49.7"
   },
   "scripts": {
-    "test": "node be-website.js"
+    "test": "node server.js"
   },
   "author": "Bram",
   "license": "MIT"
