--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "devDependencies": {
     "nodemon": "2.0.15",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard": "^25.0.0"
   },
   "scripts": {
     "test": "nodemon server.js"
