--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "2.0.15",
     "sass": "^1.49.7",
     "stylelint": "^14.5.3",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0"
   },
   "scripts": {
