--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "website.js",
   "dependencies": {
     "camelcase": "^6.3.0",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "mongodb": "^4.4.1",
     "slick-slider": "^1.8.2"
   },
   "devDependencies": {
