--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "slick-slider": "^1.8.2"
   },
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-nodemon": "^2.5.0",
     "nodemon": "2.0.15",
     "sass": "^1.49.7",
     "stylelint": "^14.5.3",
