--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mongodb": "^4.4.1",
-    "slick-slider": "^1.8.2"
+    "mongodb": "^4.4.1"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
@@ -17,7 +16,6 @@
     "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.5.0",
     "nodemon": "2.0.15",
-    "sass": "^1.49.7",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0"
