--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Dit is een matchingapp",
   "main": "website.js",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "camelcase": "^6.3.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
@@ -16,6 +17,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.5.0",
     "nodemon": "2.0.15",
+    "slug": "^5.3.0",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0"
