--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-nodemon": "^2.5.0"
+    "gulp-nodemon": "^2.5.0",
+    "nodemon": "2.0.15",
+    "slug": "^5.3.0"
   },
   "devDependencies": {
-    "nodemon": "2.0.15",
-    "slug": "^5.3.0",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0"
