--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "This is my package.json for blok-tech",
   "main": "server.js",
   "dependencies": {
+    "autoprefixer": "^10.4.2",
     "body-parser": "^1.19.2",
     "camelcase": "^6.3.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mongodb": "^4.4.1",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.5.0",
+    "mongodb": "^4.4.1",
     "nodemon": "2.0.15",
     "slug": "^5.3.0"
   },
