--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "geolocation": "^0.2.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.5.0",
+    "gulp-uglify": "^3.0.2",
     "mongodb": "^4.4.1",
     "nodemon": "2.0.15",
     "slug": "^5.3.0"
